2006-02-12  Steve Frécinaux <steve@istique.net>

	* gedit/gedit-window.[ch]: handle the visibility changes of panels, 
	toolbar and statusbar connecting to the show and hide signals.

	* gedit/gedit-commands-view.c:
	* gedit/gedit-session.c:

	adapt for above changes (use directly gtk_widget_show/hide instead of a
	custom function)

2006-02-12  Paolo Maggi  <paolo@gnome.org>

	* plugins/externaltools/tools/tools.glade: use GTK_SHADOW_IN for
	the scrolled window in the output panel

2006-02-08  James Livingston  <jrl@ids.org.au>

	* gedit/gedit-document.c: (gedit_document_replace_all): disable
	search highlighting during replace all, as it can be done at the end
	and can be slow.

2006-02-08  Paolo Borelli  <pborelli@katamail.com>

	* plugins/externaltools/tools/manager.py: properly clear the fields
	and handle sensitivity when adding and removing tools.

2006-02-04  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-commands-search.c: fix cut&paste error.

2006-02-04  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c: disable bracket matching during replace_all,
	in order to avoid wasting time. Patch by James Livingston.

2006-02-01  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-saver.c:
	* gedit/gedit-window.c:
	* gedit/sexy-icon-entry.c:
	* plugins/docinfo/gedit-docinfo-plugin.c:

	fix some C99-style variable initializations, patch by Jens Granseuer.

2006-01-30  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-file-chooser-dialog.c: add some application/x-foo
	mime types to the "All text files" white list. Spotted Mathieu Pillard.

2006-01-31  Michael Terry  <mterry@cvs.gnome.org>

	* gedit/gedit.c:
	* configure.ac:

	Convert from popt to goption (bug 329375).

=== gedit 2.13.90 ===

2006-01-30  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.13.90 released

2006-01-30  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-python-module.c: be robust to python modules import