@@ -1,3 +1,8 @@
+2006-02-12  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-view.c: use gtk_widget_get_clipboard instead of
+	gtk_clipboard_get.
+
 2006-02-12  Steve Frécinaux <steve@istique.net>
 
 	* gedit/gedit-window.[ch]: handle the visibility changes of panels, 
